[gd_scene load_steps=9 format=3 uid="uid://dpwsdtghgye0g"]

[ext_resource type="FontFile" uid="uid://b1ookgrb18ww7" path="res://Backgrounds/Tiktok.otf" id="1_edcrj"]
[ext_resource type="Script" path="res://Scripts/character_creation_menu_hud.gd" id="1_ldpd6"]
[ext_resource type="Texture2D" uid="uid://lqiwaqptvvat" path="res://Icons/MaleIcon.png" id="3_d0koe"]
[ext_resource type="Texture2D" uid="uid://b3myrglkj6g3a" path="res://Icons/FemaleIcon.png" id="4_32clp"]
[ext_resource type="Texture2D" uid="uid://cgp806h7gq7rj" path="res://Icons/MaleIconPressedBtn.png" id="4_s4ms6"]
[ext_resource type="Texture2D" uid="uid://drhoh5pkjvm35" path="res://Icons/FemaleIconPressedBtn.png" id="6_h8bpq"]

[sub_resource type="LabelSettings" id="LabelSettings_awnta"]
font = ExtResource("1_edcrj")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_as1e8"]
font = ExtResource("1_edcrj")
font_size = 25

[node name="Character_Creation_Menu_HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ldpd6")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -473.0
offset_top = -347.0
offset_right = 499.0
offset_bottom = 353.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.376471, 0.360784, 0.796078, 0.313726)

[node name="TextEdit" type="TextEdit" parent="BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = 65.0
offset_right = 247.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_edcrj")
theme_override_font_sizes/font_size = 50

[node name="Label" type="Label" parent="BG"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 336.0
offset_right = 2.0
offset_bottom = 411.0
grow_horizontal = 2
text = "Your Name"
label_settings = SubResource("LabelSettings_awnta")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="BG"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -278.0
offset_right = 278.0
offset_bottom = 94.0
grow_horizontal = 2
text = "Select a character"
label_settings = SubResource("LabelSettings_awnta")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConfirmBtn" type="Button" parent="BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = 218.0
offset_right = 116.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Confirm"

[node name="Label2" type="Label" parent="BG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -354.0
offset_top = 141.0
offset_right = 354.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
text = "minimum four characteres and maximum fiften characteres"
label_settings = SubResource("LabelSettings_as1e8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaleIconBtnToogle" type="TextureButton" parent="BG"]
layout_mode = 0
offset_left = 246.0
offset_top = 113.0
offset_right = 434.0
offset_bottom = 301.0
toggle_mode = true
texture_normal = ExtResource("3_d0koe")
texture_pressed = ExtResource("4_s4ms6")

[node name="FemaleIconBtnToogle" type="TextureButton" parent="BG"]
layout_mode = 0
offset_left = 542.0
offset_top = 113.0
offset_right = 730.0
offset_bottom = 301.0
toggle_mode = true
texture_normal = ExtResource("4_32clp")
texture_pressed = ExtResource("6_h8bpq")

[connection signal="pressed" from="BG/ConfirmBtn" to="." method="_on_confirm_btn_pressed"]
[connection signal="toggled" from="BG/MaleIconBtnToogle" to="." method="_on_male_icon_btn_toogle_toggled"]
[connection signal="toggled" from="BG/FemaleIconBtnToogle" to="." method="_on_female_icon_btn_toogle_toggled"]
